<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".system_ui.SystemUIFragment">

    <data>

        <variable
            name="fullscreen"
            type="Boolean" />

        <variable
            name="lowProfile"
            type="Boolean" />

        <variable
            name="hideNavigation"
            type="Boolean" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="64dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardElevation="0dp"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="24dp"
                        android:text="@string/system_ui_status" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_bar" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@{!fullscreen &amp;&amp; !lowProfile ? @color/colorSuccessLight : @color/colorErrorLight}"
                            android:gravity="center_horizontal"
                            android:padding="8dp"
                            android:text="@string/shown"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@{lowProfile ? @color/colorSuccessLight : @color/colorErrorLight}"
                            android:gravity="center_horizontal"
                            android:padding="8dp"
                            android:text="@string/low_profile"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@{fullscreen ? @color/colorSuccessLight : @color/colorErrorLight}"
                            android:gravity="center_horizontal"
                            android:padding="8dp"
                            android:text="@string/hidden"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/navigation_bar" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@{!hideNavigation ? @color/colorSuccessLight : @color/colorErrorLight}"
                            android:gravity="center_horizontal"
                            android:padding="8dp"
                            android:text="@string/shown"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@{hideNavigation ? @color/colorSuccessLight : @color/colorErrorLight}"
                            android:gravity="center_horizontal"
                            android:padding="8dp"
                            android:text="@string/hidden"
                            android:textAlignment="center" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/button_show_stat_nav_bar"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_status_amp_navigation_bar" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/status_bar" />

            <Button
                android:id="@+id/button_dim_stat_bar"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dim_status_bar" />

            <Button
                android:id="@+id/button_hide_stat_bar"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hide_status_bar" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/navigation_bar" />

            <Button
                android:id="@+id/button_hide_nav_bar"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hide_navigation_bar" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/fullscreen" />

            <Button
                android:id="@+id/button_leanback"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leanback" />

            <Button
                android:id="@+id/button_immersive"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/immersive" />

            <Button
                android:id="@+id/button_immersive_sticky"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/immersive_sticky" />

        </LinearLayout>

    </ScrollView>

</layout>